# bitlinear

./: .gitignore  LICENSE  README.md  bitlinear.py  bitlinear2.py  bitnet.py  bitnet_int.py  classifier.py  eval.py  kernels.py  pyproject.toml  requirements.txt  train.py
bitlinear/: __init__.py  __main__.py  bitlinear.py  kernels.py  measures.py  norms.py  utils.py
bitlinear/commands/: compile.py  extract.py  generate.py  optimize.py
bitlinear/frozen_bitlinear/: .gitignore  README.md  ReadME.md  __init__.py  frozen_bitlinear.py  requirements.txt
bitlinear/frozen_bitlinear/cuda/: __init__.py
bitlinear/frozen_bitlinear/cuda/kernels/: __init__.py
bitlinear/frozen_bitlinear/cuda/pack_weights/: pack_weights.cu  setup.py
bitlinear/frozen_bitlinear/scripts/: build.sh  clean.sh  test.sh
bitlinear/frozen_bitlinear/src/: __init__.py  anthropic.py  default.py  naive.py  triton.py  warptiling.py
bitlinear/frozen_bitlinear/src/utils/: Kernel.py  __init__.py  helpers.py
bitlinear/frozen_bitlinear/tests/: Benchmark.py  __main__.py  helpers.py
examples/: classifier.py  eval.py
examples/classifier/: eval.py  requirements.txt  train.py
examples/matrices/: pathological.bitlinear  test.bitlinear
examples/mnist/: requirements.txt  train.py
examples/node-classification/: node_classification_example.py
examples/node_classification/: README.md  node_classification_example.py
examples/text_classification/: .gitignore  README.md  data.py  idf.py  mlp.py  run.bash  run.py
examples/xor/: README.md  xor.py  xor_example.py
(+22 files in other folders)
