[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitlinear"
version = "2.2.0"
authors = [
  { name = "Peter Schneider-Kamp" }
]

description = "An production-ready implementation of 1.58 bit quantization-aware training and inference."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'torch',
]

[project.urls]
"Homepage" = "https://github.com/schneiderkamplab/bitlinear"
"Bug Tracker" = "https://github.com/schneiderkamplab/bitlinear/issues"

[tool.hatch.build]
include = [
    'bitlinear',
    'LICENSE',
    'README.md',
]
